tests/typing/bad/testfile-equiv-1.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>
int main() { int x; bool *p = &x; }
